changes to libs

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         }
     },
     "require": {
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "phpunit/phpunit": "^8"
     }
 }
